--- a/Athlete_Connect/00 - cadastro_login/00 - welcome/assets/style.css
+++ b/Athlete_Connect/00 - cadastro_login/00 - welcome/assets/style.css
@@ -3,15 +3,18 @@
   padding: 0;
   box-sizing: border-box;
 }
+/* css aplicado em todos os tipos de dispositivos e em todos os filhos da tag main:*/
 main {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   flex-direction: column;
   align-items: center;
-
   display: flex;
   gap: 20px;
   justify-content: center;
   height: 100vh;
 }
+
+/* dimensoes na logo com o nome */
 .logoComNome {
   display: flex;
   flex-direction: column;
@@ -30,9 +33,6 @@ main {
 main h1 {
   color: #000;
   text-align: center;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-    sans-serif;
   font-size: 27px;
   font-style: normal;
   font-weight: 700;
@@ -40,6 +40,7 @@ main h1 {
   letter-spacing: 5.67px;
 }
 
+/* 1 - bloco de escolha entre doador/org e atleta */
 .escolha {
   display: flex;
   gap: 36px;
@@ -47,6 +48,7 @@ main h1 {
   width: 50px;
   height: 250px;
 }
+  /* 1.2 - CSS do bloco de opção */
 .opcao {
   display: flex;
   flex-direction: column;
@@ -54,16 +56,10 @@ main h1 {
   text-align: center;
   gap: 20px;
   font-weight: 500;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-    sans-serif;
 }
 .opcao button {
   color: #2c2c2c;
   text-align: center;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-    sans-serif;
   font-size: 16px;
   font-weight: 900;
   letter-spacing: -0.22px;
@@ -83,6 +79,7 @@ main h1 {
   transition: 0.3s;
 }
 
+/* bloco de redirecionamento a tela de login */
 .loginpage {
   display: flex;
   flex-direction: column;
@@ -90,9 +87,6 @@ main h1 {
   gap: 10px;
   color: #000;
   text-align: center;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-    sans-serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 500;
@@ -108,6 +102,7 @@ main h1 {
   font-weight: 700;
 }
 
+/* imagem do final da página */
 .footerImg {
   width: 247px;
   height: 65px;
@@ -115,11 +110,14 @@ main h1 {
   margin-top: 20px;
 }
 
+/* Mobile */
 @media screen and (max-width: 1024px) {
   main {
     flex-direction: column;
     align-items: center;
   }
+
+  /* DIMENSOES DA LOGO: */
   .logoComNome {
     display: flex;
     flex-direction: column;
