--- a/Athlete_Connect/00 - cadastro_login/00 - welcome/assets/style.css
+++ b/Athlete_Connect/00 - cadastro_login/00 - welcome/assets/style.css
@@ -1,9 +1,10 @@
+/* css aplicado em todos os tipos de dispositivos e em todos os filhos da tag main:*/
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-/* css aplicado em todos os tipos de dispositivos e em todos os filhos da tag main:*/
+
 main {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   flex-direction: column;
@@ -14,7 +15,7 @@ main {
   height: 100vh;
 }
 
-/* dimensoes na logo com o nome */
+/* dimensoes da logo com o nome */
 .logoComNome {
   display: flex;
   flex-direction: column;
