--- a/Athlete_Connect/00 - cadastro_login/01 - login/assets/style.css
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/assets/style.css
@@ -1,3 +1,4 @@
+/* css aplicado em todos os tipos de dispositivos e em todos os filhos da tag main:*/
 * {
   margin: 0;
   padding: 0;
@@ -13,6 +14,8 @@ main {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+
+/* dimensoes/org da logo */
 .logo {
   display: flex;
   flex-direction: column;
@@ -30,6 +33,7 @@ main h1 {
   letter-spacing: 5.67px;
 }
 
+/* bloco de redirecionamento a modal de troca de senha e tela de escolha de carreira, o nome está loginpage pois reutilizei o componente */
 .loginpage {
   display: flex;
   flex-direction: column;
@@ -47,12 +51,8 @@ main h1 {
   margin-bottom: 0;
 }
 .loginpage a,
-.modal h4 {
-  color: #03af50;
-  text-decoration: none;
-  font-weight: 700;
-}
 
+/* bloco de inputs de login */
 .forms {
   display: flex;
   flex-direction: column;
@@ -69,42 +69,8 @@ main h1 {
   padding: 20px;
   font-size: 20px;
 }
-.modal input {
-  width: 95%;
-  height: 47px;
-  flex-shrink: 0;
-  background-color: #f7fdff;
-  border: 1px solid #cdcdcd;
-  border-radius: 25px;
-  padding: 20px;
-  font-size: 20px;
-}
-.forms input::placeholder,
-.modal input::placeholder {
-  color: #9b9b9b;
-  font-size: 16px;
-  font-weight: 400;
-}
 
-.botaoPrincipal {
-  width: 303px;
-  height: 47px;
-  margin-top: 40px;
-  background-color: #07da65;
-  border: none;
-  border-radius: 25px;
-  color: #2c2c2c;
-  font-size: 20px;
-  font-weight: 800;
-  cursor: pointer;
-}
-
-.botaoPrincipal:hover {
-  box-shadow: 0 0 0 0.2rem rgba(7, 218, 101, 0.25);
-  background: #07da65;
-  transition: 0.3s;
-}
-
+/* css do modal de redefinição de senha */
 .modal {
   display: none;
   position: fixed;
@@ -121,6 +87,17 @@ main h1 {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
+.modal input {
+  width: 95%;
+  height: 47px;
+  flex-shrink: 0;
+  background-color: #f7fdff;
+  border: 1px solid #cdcdcd;
+  border-radius: 25px;
+  padding: 20px;
+  font-size: 20px;
+}
+
 .modal-content {
   display: flex;
   flex-direction: column;
@@ -128,14 +105,19 @@ main h1 {
   align-items: center;
   gap: 10px;
 }
+
 .modal-content span.close {
   display: inline-block;
   align-self: flex-end;
   cursor: pointer;
   font-size: 30px;
 }
+
 .modal h4 {
   font-size: 20px;
+  color: #03af50;
+  text-decoration: none;
+  font-weight: 700;
 }
 
 .modal button {
@@ -143,6 +125,35 @@ main h1 {
   margin-top: 0;
   margin-bottom: 15px;
 }
+
+/* css do placeholder dos inputs */
+.forms input::placeholder,
+.modal input::placeholder {
+  color: #9b9b9b;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+/* css dos botões principais */
+.botaoPrincipal {
+  width: 303px;
+  height: 47px;
+  margin-top: 40px;
+  background-color: #07da65;
+  border: none;
+  border-radius: 25px;
+  color: #2c2c2c;
+  font-size: 20px;
+  font-weight: 800;
+  cursor: pointer;
+}
+.botaoPrincipal:hover {
+  box-shadow: 0 0 0 0.2rem rgba(7, 218, 101, 0.25);
+  background: #07da65;
+  transition: 0.3s;
+}
+
+/* mobile */
 @media screen and (max-width: 1024px) {
   main {
     flex-direction: column;
