fix: login page css na linha 53(.loginpage a)

--- a/Athlete_Connect/00 - cadastro_login/01 - login/assets/style.css
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/assets/style.css
@@ -50,8 +50,11 @@ main h1 {
 .loginpage p {
   margin-bottom: 0;
 }
-.loginpage a,
-
+.loginpage a {
+  color: #03af50;
+  text-decoration: none;
+  font-weight: 700;
+}
 /* bloco de inputs de login */
 .forms {
   display: flex;
