--- a/Athlete_Connect/04 - perfil/style.css
+++ b/Athlete_Connect/04 - perfil/style.css
@@ -26,6 +26,7 @@ body {
     height: 100px;
     border-radius: 50%;
     margin-top: 70px;
+    margin-left: 5px;
 }
 
 
@@ -117,12 +118,13 @@ h1 {
     width: 50px ;
     height: 50px;
     border-radius: 50%;
+   
 }
 /*Eu não sei como alinhar sem utilizar esse margin, caso alguem possa mudar vai ser bom*/
 .nome-usuario {
     font-weight: bold;
     font-size: 1rem;
-    margin-left: -355px;
+    margin-left: -335px;
 }
 
 .texto-postagem {
@@ -356,7 +358,38 @@ svg {
     }
   }
   /* 1.3.6 ------ closed */
+.estatisticasPostagem,
+.iconsPostagem {
+  display: flex;
+  gap: 15px;
+  justify-content: flex-start;
+  text-align: center;
+}
 
+.iconsPostagem {
+  margin-bottom: -10px;
+}
+
+.iconsPostagem img {
+  width: auto;
+  height: 25px;
+  margin-top: 2px;
+}
+.pessoas {
+    margin-left: 15px;
+    display: flex;
+    gap: 3px;
+    align-items: center;
+  }
+  .estatisticasPostagem .pessoas img {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    margin-left: -15px;
+    border: 2px solid white;
+  }
+  
+  
 @media (max-width: 600px) {
     .profile-main {
         padding: 8px;
