--- a/Athlete_Connect/06 - CONFIG/config.css
+++ b/Athlete_Connect/06 - CONFIG/config.css
@@ -19,6 +19,11 @@
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
+        .qr-code{
+          height: 50px;
+            margin-left: 300px;
+            margin-top: -100px;
+        }
 
         .header {
             text-align: center;
@@ -57,7 +62,13 @@
             width: 50px;
             height: 40px;
             margin-right: 5px;
-            margin-left: 25px;
+            margin-left: 30px;
+        }
+        .icone-imagem-2{
+            width: 50px;
+            height: 60px;
+            margin-right: 5px;
+            margin-left: 30px;
         }
         .campos-itens svg {
             width: 24px;
