--- a/Athlete_Connect/04 - perfil/style.css
+++ b/Athlete_Connect/04 - perfil/style.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -5,37 +11,38 @@ body {
 }
 /* Banner */
 .banner {
-width: 110%;
-height: 200px;
-background-image: url('https://img.freepik.com/fotos-gratis/halteres-no-chao-de-uma-academia-ai-generative_123827-23743.jpg'); 
-background-position: center;
+  width: 100%;
+  height: 130px;
+  background-image: url("https://img.freepik.com/fotos-gratis/halteres-no-chao-de-uma-academia-ai-generative_123827-23743.jpg");
+  background-position: center;
 }
-.main{
+main {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-  Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-display: flex;
-flex-direction: column;
-height: 100vh;
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 /*Tentei deixar bem organizada a estrutura do css*/
 .header-perfil {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;    
+  gap: 5px;
+  align-items: flex-start;
+  border-bottom: 2px solid #d9d9d9;
 }
 
 .informacao-perfil {
   display: flex;
-  flex-direction: row;
-  align-items: center;
   gap: 20px;
+  align-items: center;
 }
 
 .foto-perfil {
-  width: 100px;
-  height: 100px;
+  width: 85px;
+  height: 85px;
   border-radius: 50%;
-  margin-top: -100px;
+  margin-top: -40px;
   margin-left: 10px;
 }
 
@@ -43,48 +50,44 @@ height: 100vh;
   display: flex;
   flex-direction: row;
   text-align: center;
-  gap: 30px;
-  margin-left: 50px;
-  margin-top: 100px;
+  gap: 45px;
 }
-.estatisticas{
-margin-top: -100px;
-font-size: larger;
+.estatisticas {
+  font-size: larger;
 }
 
-.perfil-detalhes {
-  text-align: center;
-  margin-top: -40px;
-  border-radius: 40px;
-  
-  
-}
-
-h1 {
-  font-size: 1.2rem;
-  margin-right: 40px;
-
-}
-  /*Algumas coisas estão bem "Improvisadas", por exemplo esses margin porque eu não estou conseguindo alinhar sempre do jeito que fizemos no figma*/
+/*Algumas coisas estão bem "Improvisadas", por exemplo esses margin porque eu não estou conseguindo alinhar sempre do jeito que fizemos no figma*/
 .biografia {
   font-size: 1rem;
   color: #666;
-  margin-left: 30px;
-  margin-top:-10px;
 }
 
+.perfil-detalhes {
+  margin-left: 20px;
+  color: #000;
 
-.botoes{
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+.perfil-detalhes h1 {
+  font-size: 1.5rem;
+
+}
+
+.botoes {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin: 15px 0px;
 }
 
-.botao-seguir, .botao-mensagem, .botao-compartilhar{
-  margin: 0 8px;
+.botao-seguir,
+.botao-mensagem,
+.botao-compartilhar {
+  margin: 0px 5px;
   padding: 8px 22px;
   border: none;
   cursor: pointer;
@@ -99,16 +102,15 @@ h1 {
   padding: 9px 30px;
 }
 
-.botao-mensagem{
+.botao-mensagem {
   text-decoration: none;
   border: 2px solid #1dca02;
   background-color: white;
   color: #1dca02;
   border-radius: 30px;
   transition: border-color 0.3s ease;
-  
 }
-.botao-compartilhar{
+.botao-compartilhar {
   text-decoration: none;
   border: 2px solid #1dca02;
   background-color: white;
@@ -119,7 +121,7 @@ h1 {
 .feed {
   width: 100%;
   max-width: 600px;
-  margin: 0 auto;
+  margin: 0px auto;
   padding: 10px;
 }
 
@@ -128,24 +130,32 @@ h1 {
   /* bloco principal da postagem  */
   display: flex;
   gap: 8px;
-  width: 100%;
   padding: 20px 18px 10px 18px;
   border-bottom: 2px solid #d9d9d9;
-  margin-left: -30px;
+}
+
+.postagemcontent {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  width: 100%;
+  margin-top: 15px;
+}
+
+.postagemcontent > img {
+  width: 265px;
+  height: auto;
+  border-radius: 11px;
 }
 /* 1.2 - FOTO DE PERFIL */
 .profilePhoto img {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  margin-left: 12px;
-  margin-top: 5px;
 }
-.nomePerfil{
-  margin-bottom: -15px;
-  
+.nomePerfil {
+  margin-top: 8px;
 }
-
 /* 1.3 - conteúdo principal da postagem, nome de perfil, descrição e img(opicional) e as estatisticas */
 .postagemcontent {
   display: flex;
@@ -403,7 +413,6 @@ svg {
   display: flex;
   gap: 3px;
   align-items: center;
-
 }
 .estatisticasPostagem .pessoas img {
   width: 30px;
@@ -417,9 +426,9 @@ svg {
 
 @media (max-width: 600px) {
   .profile-main {
-      padding: 8px;
+    padding: 8px;
   }
   .stats {
-      gap: 10px;
+    gap: 10px;
   }
 }
