--- a/Athlete_Connect/06 - CONFIG/config.css
+++ b/Athlete_Connect/06 - CONFIG/config.css
@@ -89,6 +89,7 @@
         }
 
         .close-app {
-            color: #e53935;
+            color: #c9211e;
             font-weight: bold;
+
         }
