--- a/Athlete_Connect/01 - telas principais/assets/style.css
+++ b/Athlete_Connect/01 - telas principais/assets/style.css
@@ -71,7 +71,9 @@ main {
 
 /* 1 - conteúdo principal */
 .maincontent {
-  margin-top: 93px; /* margin para compensar o header */
+  margin: 93px 0px 0px 0px;/* margin para compensar o header */
+
+
 }
 
 /* 1.1 - css dos blocos de postagem */
@@ -387,33 +389,24 @@ svg {
 
 .modal {
   display: none;
+  justify-content: space-between;
+  flex-direction: column;
   position: fixed;
   z-index: 9999;
   top: 0%;
   width: 100%;
   height: 100%;
-  padding: 20px;
+  padding: 20px 20px 0px 20px;
   overflow: auto;
   background-color: rgb(255, 255, 255);
-}
-
-.modal input {
-  width: 95%;
-  height: 47px;
-  flex-shrink: 0;
-  background-color: #f7fdff;
-  border: 1px solid #cdcdcd;
-  border-radius: 25px;
-  padding: 20px;
-  font-size: 20px;
 }
 
 .modal-content {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  width: 100%;
   align-items: center;
-  gap: 10px;
+  
 }
 
 .modal-content span.close {
@@ -429,22 +422,59 @@ svg {
 .modal .postText {
   display: flex;
   width: 100%;
+  gap: 10px;
   justify-content: flex-start;
 }
 
-.modal button {
-  position: fixed;
-  bottom: 10px;
-  left: 60%;
+.headerPost{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 250px;
+}
 
+#textPost {
+  width: 100%;
+  height: 170px;
+  resize: none;
+  border: none;
+  font-size: 17px;
+  font-weight: 500;
+  margin-top: 10px;
+}
+#textPost::placeholder {
+  font-size: 17px;
+  font-weight: 600;
+}
+textarea:focus {
+  outline: none;
+}
+
+    /* nav botton do modal de postagem */
+.navbottomPost {
+  position: fixed;
+  bottom: 10;
+  left: auto;
+  border-radius: 15px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 80%;
+  height: 50px;
+  
+  border: 1px solid #00bf1f;
+}
+.modal button {
   width: 30%;
-  margin-bottom: 15px;
+  height: 30px;
   background-color: #07da65;
   border: none;
   border-radius: 25px;
   color: #2c2c2c;
   font-size: 20px;
-  font-weight: 800;
+  font-weight: 600;
   cursor: pointer;
 }
 /* Bottom Navigation Bar */
@@ -474,5 +504,9 @@ svg {
   main {
     flex-direction: column;
     align-items: center;
+  }
+  .modal-content {
+   flex-direction: column-reverse;
+    
   }
 }
