--- a/Athlete_Connect/06 - CONFIG/config.css
+++ b/Athlete_Connect/06 - CONFIG/config.css
@@ -19,6 +19,7 @@
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
+
         .header {
             text-align: center;
             margin-bottom: 20px;
@@ -40,19 +41,22 @@
         .header h1 {
             width: 180.769px;
             height: 27.047px;
-            margin-left: 60px;  
+            margin-left: 60px;
+        }
+
+
+        .seta-voltar img {
+            width: 40.333px;
+            height: 16.667px;
+            display: flex;
         }
 
         .seu-perfil {
             display: flex;
             align-items: center;
-            justify-content: center;
-        }
-
-        .seta-voltar img{
-            width: 40.333px;
-            height: 16.667px;
-            display: flex;
+            justify-content: flex-end;
+            gap: 20px;
+            margin-right: 26px;
         }
 
         .seu-perfil h2 {
@@ -67,6 +71,8 @@
         .qr-code img {
             height: 30px;
             width: 50;
+            margin-right: -20px;
+
         }
 
         .lista-configuracoes {
@@ -92,15 +98,15 @@
         }
 
         .icone-imagem-1 {
-            width: 50px;
-            height: 40px;
+            width: 32px;
+            height: 32px;
             margin-right: 5px;
             margin-left: 30px;
         }
 
         .icone-imagem-2 {
-            width: 50px;
-            height: 60px;
+            width: 32px;
+            height: 32px;
             margin-right: 5px;
             margin-left: 30px;
         }
@@ -127,4 +133,26 @@
             color: #c9211e;
             font-weight: bold;
 
+        }
+
+        .nav-item {
+            color: #444;
+            text-decoration: none;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            font-size: 12px;
+        }
+
+        .bottom-nav {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            display: flex;
+            justify-content: space-around;
+            border-radius: 20px 20px 0px 0px;
+            border: 2px solid #f1efef;
+            background-color: rgba(255, 255, 255, 0.95);
+            padding: 18px 0;
         }
