--- a/Athlete_Connect/05 - doacoes/style.css
+++ b/Athlete_Connect/05 - doacoes/style.css
@@ -1,61 +1,119 @@
 .switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
-  }
-  
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
 
-  .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
 
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  input:checked + .slider {
-    background-color: #2196F3;
-  }
-  
-  input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
-  }
-  
-  input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-  }
-  
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
 
-  .slider.round {
-    border-radius: 34px;
-  }
-  
-  .slider.round:before {
-    border-radius: 50%;
-  }
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: #2196f3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196f3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+.finalizar {
+  width: 303px;
+  height: 47px;
+  margin-top: 40px;
+  background-color: #07da65;
+  border: none;
+  border-radius: 25px;
+  color: #ffffff;
+  font-size: 20px;
+  font-weight: 800;
+  cursor: pointer;
+  text-align: center;
+  margin-left: 30px;
+}
+
+.finalizar:hover {
+  box-shadow: 0 0 0 0.2rem rgba(7, 218, 101, 0.25);
+  background: #07da65;
+  transition: 0.3s;
+}
+
+.opc {
+  width: 170px;
+  height: 47px;
+  margin-top: 20px;
+  background-color: #ffffff;
+  color: #07da65;
+
+  border: none;
+  border-radius: 25px;
+  border: 1px solid #07da65;
+  font-size: 20px;
+  font-weight: 800;
+  cursor: pointer;
+  margin-left: 8px;
+}
+
+input {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+input {
+  width: 303px;
+  height: 47px;
+  flex-shrink: 0;
+  background-color: #f7fdff;
+  border: 1px solid #cdcdcd;
+  border-radius: 25px;
+  font-size: 20px;
+  margin-left: 23px;
+}
+
+.boneco {
+  width: 210px;
+  height: 156px;
+  text-align: center;
+  margin-left: 78px;
+}
