--- a/Athlete_Connect/01 - telas principais/assets/style.css
+++ b/Athlete_Connect/01 - telas principais/assets/style.css
@@ -9,6 +9,7 @@ main {
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   height: 100vh;
 }
 
@@ -90,6 +91,8 @@ main {
   width: 50px;
   height: 50px;
   border-radius: 50%;
+  /* faca a imagem se ajustar cover */
+  object-fit: cover;
 }
 
 /* 1.3 - conteúdo principal da postagem, nome de perfil, descrição e img(opicional) e as estatisticas */
