--- a/Athlete_Connect/02 - chat/style.css
+++ b/Athlete_Connect/02 - chat/style.css
@@ -25,8 +25,9 @@ header img{
     width: 40px;
     height: 40px;
     border-radius: 20px;
-    margin-left: 5px;
-    margin-bottom: 5px;
+    margin-left: -7px;
+    margin-right: 2px;
+    
 }
 /* Container Principal do Chat */
 .chat-container {
