build: seuPerfil, perfilVistoPorAtleta

--- a/Athlete_Connect/00 - cadastro_login/01 - login/assets/style.css
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/assets/style.css
@@ -45,6 +45,7 @@ main h1 {
   font-weight: 500;
   line-height: 20px;
   letter-spacing: -0.22px;
+  margin-top: 10px;
 }
 .loginpage p {
   margin-bottom: 0;
