--- a/Athlete_Connect/05 - doacoes/style.css
+++ b/Athlete_Connect/05 - doacoes/style.css
@@ -4,6 +4,14 @@
   box-sizing: border-box;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+main {
+  display: flex;
+  flex-direction: column;
+ padding: 20px;
+  height: 100vh;
+  background-color: #f7fdff;
+}
 .switch {
   position: relative;
   display: inline-block;
@@ -66,7 +74,6 @@ input:checked + .slider:before {
 .finalizar {
   width: 303px;
   height: 47px;
-  margin-top: 40px;
   background-color: #07da65;
   border: none;
   border-radius: 25px;
@@ -85,7 +92,7 @@ input:checked + .slider:before {
 }
 
 .opc {
-  width: 170px;
+  width: 45%;
   height: 47px;
   margin-top: 20px;
   background-color: #ffffff;
@@ -100,21 +107,37 @@ input:checked + .slider:before {
   margin-left: 8px;
 }
 
+/* doacoes */
+.doacoesbox {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-bottom: 10px;
+  
+}
+
+.doacaoUnit {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+}
+
 input {
   display: flex;
+
   flex-direction: column;
   gap: 10px;
 }
 
 input {
-  width: 303px;
+  width: 100%;
   height: 47px;
   flex-shrink: 0;
   background-color: #f7fdff;
   border: 1px solid #cdcdcd;
   border-radius: 25px;
   font-size: 20px;
-  margin-left: 23px;
 }
 
 .boneco {
