Mudança na margem do css

--- a/Athlete_Connect/00 - cadastro_login/00 - welcome/assets/style.css
+++ b/Athlete_Connect/00 - cadastro_login/00 - welcome/assets/style.css
@@ -93,6 +93,7 @@ main h1 {
   font-weight: 500;
   line-height: 20px;
   letter-spacing: -0.22px;
+  margin-bottom: 5px;
 }
 .loginpage p {
   margin-bottom: 0;
