--- a/Athlete_Connect/00 - cadastro_login/01 - login/assets/style.css
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/assets/style.css
@@ -38,6 +38,7 @@ main h1 {
   flex-direction: column;
   align-items: center;
   gap: 10px;
+
   color: #000;
   text-align: center;
   font-size: 20px;
@@ -45,7 +46,8 @@ main h1 {
   font-weight: 500;
   line-height: 20px;
   letter-spacing: -0.22px;
-  margin-top: 10px;
+  margin: 0px 0px;
+
 }
 .loginpage p {
   margin-bottom: 0;
@@ -71,6 +73,12 @@ main h1 {
   border-radius: 25px;
   padding: 20px;
   font-size: 20px;
+}
+
+.formsCadastro {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 
