--- a/docs/05 - doacoes/TelasPagamento/stylePagar.css
+++ b/docs/05 - doacoes/TelasPagamento/stylePagar.css
@@ -33,6 +33,7 @@ body {
 .payment-container h2 {
   margin-bottom: 20px;
   color: #333;
+  
 }
 
 /* Cartão de crédito */
@@ -69,19 +70,25 @@ body {
 /* Formulário de pagamento */
 .payment-form label {
   font-size: 14px;
-  color: #666;
+  color: #000000;
   display: block;
   margin-bottom: 5px;
   text-align: left;
+  
 }
 
 .payment-form input {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 15px;
-  border: 1px solid #ddd;
-  border-radius: 15px;
-  font-size: 16px;
+  display: flex;
+  flex-direction: column;
+  width: 303px;
+  height: 47px;
+  flex-shrink: 0;
+  
+  background-color: #f7fdff;
+  border: 1px solid #cdcdcd;
+  border-radius: 25px;
+  padding: 20px;
+  font-size: 20px;
 }
 
 .payment-form .row {
@@ -90,21 +97,26 @@ body {
 }
 
 .payment-form .col {
+ display: flex;
+ flex-direction: column ;
+ align-items: flex-start;
   flex: 1;
+  gap: 5px;
 }
 
 /* Botão de pagamento */
 .btn {
   width: 100%;
   padding: 15px;
-  background: #49a09d;
+  background: #00bf1f;
   color: #fff;
   border: none;
-  border-radius: 20px;
+  border-radius: 25px;
   font-size: 16px;
   font-weight: bold;
   cursor: pointer;
   transition: background 0.3s;
+  margin-top: 20px;
 }
 
 .btn:hover {
