--- a/docs/00 - cadastro_login/01 - login/assets/style.css
+++ b/docs/00 - cadastro_login/01 - login/assets/style.css
@@ -22,6 +22,10 @@ main {
   justify-content: center;
   align-items: center;
 }
+.logo .boneco {
+  max-width: 210px;
+  height: 156px;
+}
 main h1 {
   color: #000;
   text-align: center;
