--- a/docs/04 - perfil/style.css
+++ b/docs/04 - perfil/style.css
@@ -124,6 +124,7 @@ main {
   border-radius: 30px;
   transition: border-color 0.3s ease;
 }
+
 .botao-compartilhar {
   text-decoration: none;
   border: 2px solid #00bf1f;
@@ -133,13 +134,9 @@ main {
 }
 
 .maincontent{
-
   width: 100%;
-
-  max-width: 600px;
-  margin: 0px auto;
-  padding: 10px;
 }
+
 .maincontent2 {
   display: flex;
   flex-direction: column;
@@ -158,6 +155,7 @@ main {
   /* bloco principal da postagem  */
   display: flex;
   gap: 8px;
+  width: 100%;
   padding: 10px 8px 10px 10px;
   border-bottom: 2px solid #d9d9d9;
   
