--- a/docs/05 - doacoes/stylesrecebidas.css
+++ b/docs/05 - doacoes/stylesrecebidas.css
@@ -14,11 +14,17 @@ body {
 }
 
 .container {
-  margin-top: 20px;
-  width: 375px;
-  height: 800px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
+  width: 100%;
+  height: 100%;
   position: relative;
   background: #F5F5F5;
+}
+
+.container a img {
+ 
 }
 
 .header {
@@ -46,15 +52,6 @@ h1 {
   letter-spacing: 0.56px;
 }
 
-h2 {
-  color: #4b4646;
-  text-align: end;
-  font-size: 15px;
-  display: flex;
-  padding-top: 68px;
-  padding-left: 82.8%;
-}
-
 .months {
   position: absolute;
   top: 133px;
@@ -77,6 +74,7 @@ h2 {
 
 .donation-list {
   position: absolute;
+  width: 90%;
   top: 182px;
   left: 23px;
   display: flex;
@@ -85,7 +83,7 @@ h2 {
 }
 
 .donation-item {
-  width: 327px;
+  width: 100%;
   padding: 16px;
   background: white;
   border-radius: 16px;
