--- a/docs/06 - CONFIG/config.css
+++ b/docs/06 - CONFIG/config.css
@@ -12,12 +12,13 @@ body {
 }
 
 .container {
-    max-width: 400px;
+    width: 100%;
     margin: 0 auto;
     padding: 20px;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    margin-bottom: 50px;
 }
 
 .header {
