--- a/docs/05 - doacoes/TelasPagamento/stylePagar.css
+++ b/docs/05 - doacoes/TelasPagamento/stylePagar.css
@@ -28,6 +28,7 @@ body {
   border-radius: 8px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   text-align: center;
+  
 }
 
 .payment-container h2 {
@@ -38,12 +39,17 @@ body {
 
 /* Cartão de crédito */
 .credit-card-box {
+  /* coloque no centro tudo */
+  
+
+  width: 100%;
   margin-bottom: 40px;
+
   
 }
 .card {
   position: relative;
-  width: 100%;
+  max-width: 360px;
   height: 200px;
   border-radius: 20px;
   background: linear-gradient(135deg, #bd6772, #53223f);
@@ -80,9 +86,10 @@ body {
 .payment-form input {
   display: flex;
   flex-direction: column;
-  width: 303px;
+  width: 100%;
   height: 47px;
   flex-shrink: 0;
+  margin-bottom: 10px;
   
   background-color: #f7fdff;
   border: 1px solid #cdcdcd;
@@ -130,6 +137,7 @@ body {
   }
 
   .credit-card-box {
+    
     height: 180px;
   }
 
