--- a/docs/05 - doacoes/style.css
+++ b/docs/05 - doacoes/style.css
@@ -1,4 +1,4 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -8,10 +8,11 @@
 main {
   display: flex;
   flex-direction: column;
- padding: 20px;
+  padding: 20px;
   height: 100vh;
-  background-color: #f7fdff;
+  background-color: #fffffff7;
 }
+
 .switch {
   position: relative;
   display: inline-block;
@@ -50,15 +51,15 @@ main {
   transition: 0.4s;
 }
 
-input:checked + .slider {
+input:checked+.slider {
   background-color: #2196f3;
 }
 
-input:focus + .slider {
+input:focus+.slider {
   box-shadow: 0 0 1px #2196f3;
 }
 
-input:checked + .slider:before {
+input:checked+.slider:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
@@ -71,9 +72,11 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
-.texto-valor{
+
+.texto-valor {
   margin-left: 25px;
 }
+
 .finalizar {
   width: 303px;
   height: 47px;
@@ -86,8 +89,7 @@ input:checked + .slider:before {
   cursor: pointer;
   text-align: center;
   margin-left: 30px;
-  align-items: center
-  ;
+  align-items: center;
 }
 
 .finalizar:hover {
@@ -121,7 +123,7 @@ input:checked + .slider:before {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  
+
   width: 305px;
   height: auto;
   padding: 20px;
@@ -176,6 +178,7 @@ input:checked + .slider:before {
   font-size: 16px;
   font-weight: 400;
 }
+
 /* css dos botões principais */
 .botaoPrincipal {
   width: 303px;
@@ -189,18 +192,20 @@ input:checked + .slider:before {
   font-weight: 800;
   cursor: pointer;
 }
+
 .botaoPrincipal:hover {
   box-shadow: 0 0 0 0.2rem rgba(7, 218, 101, 0.25);
   background: #07da65;
   transition: 0.3s;
 }
+
 /* doacoes */
 .doacoesbox {
   display: flex;
   flex-direction: column;
   gap: 10px;
   margin-bottom: 10px;
-  
+
 }
 
 .doacaoUnit {
@@ -234,7 +239,7 @@ input {
   margin-left: 78px;
 }
 
-.logo{
+.logo {
   width: 250px;
   height: 250px;
   display: flex;
@@ -242,15 +247,16 @@ input {
   margin-left: 60px;
 }
 
-.check{
+.check {
   width: 170px;
   text-align: center;
   margin-left: 90px;
 }
+
 /* Estilo padrão dos botões */
 .opc {
-  background-color: #fffffff7; 
-  color: #333; 
+  background-color: #f7fdff;
+  color: #333;
   border: 1px solid #00ff22;
   padding: 10px 20px;
   cursor: pointer;
@@ -259,8 +265,55 @@ input {
 
 
 .opc.selected {
-  background-color: #00ff22; 
-  color: #fff; 
+  background-color: #00ff22;
+  color: #fff;
 }
 
+@media (min-width: 1280px) {
 
+  .boneco {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+  }
+
+  #doacoesFixas {
+    margin-left: 19cap;
+  }
+
+  .doacoesbox {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  h3 {
+    text-align: center;
+    font-size: 3cap;
+    margin-top: 10px;
+    margin-bottom: 5px;
+  }
+
+  h2{
+    text-align: center;
+    font-size: 3cap;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 5cm;
+  }
+
+  input {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
+  }
+
+  .finalizar {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+}
